[tool.poetry]
name = "botengine"
version = "5.0.0"
description = ""
authors = ["Vitaliy Grusha <vit.grusha@gmail.com>"]
readme = "README.md"
packages = [{include = "botengine"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot-raw = "^20.3"
pydango = {git = "ssh://git@github.com/onicdev/pydango.git", rev = "0d025b08e7776436a4c16440aece494cb5545214"}
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
